--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,6 +184,7 @@
 
     [tool.ruff]
         extend = "../ruff-shared.toml"
+        extend-exclude = ["scripts", "docs", "examples"]
 
         [tool.ruff.lint.isort]
             known-first-party = [
