--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@
         "Typing :: Typed",
     ]
     dependencies = [
+        "beartype (>=0.19.0)",
         "cryptography (>=45.0.5)",
         "flext-core @ file:../flext-core",
         "flext-ldif @ file:../flext-ldif",
