--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,11 @@
                 develop = true
                 path = "../flext-ldif"
 
+            [tool.poetry.dependencies.flext-quality]
+                develop = true
+                optional = true
+                path = "../flext-quality"
+
         [tool.poetry.group.dev.dependencies]
             autoflake = ">=2.3.1"
             black = ">=25.1.0"
@@ -191,3 +196,6 @@
             known-first-party = [
                 "flext_ldap",
             ]
+
+    [tool.mypy]
+
