--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   openldap:
     image: osixia/openldap:1.5.0
@@ -19,9 +17,12 @@ services:
       - "3390:389"
       - "3636:636"
     volumes:
-      - ./ldap-data:/var/lib/ldap
-      - ./ldap-config:/etc/ldap/slapd.d
-      - ./ldif-init:/container/service/slapd/assets/config/bootstrap/ldif/custom
+      # Use named Docker volumes instead of bind mounts to avoid permission issues
+      # and prevent directories from being tracked in git
+      - flext-ldap-data:/var/lib/ldap
+      - flext-ldap-config:/etc/ldap/slapd.d
+      # Keep ldif-init as bind mount (read-only, no permission issues)
+      - ./ldif-init:/container/service/slapd/assets/config/bootstrap/ldif/custom:ro
     command: --copy-service --loglevel debug
     healthcheck:
       test: ["CMD", "ldapsearch", "-x", "-H", "ldap://localhost:389", "-b", "dc=flext,dc=local", "-D", "cn=REDACTED_LDAP_BIND_PASSWORD,dc=flext,dc=local", "-w", "REDACTED_LDAP_BIND_PASSWORD"]
@@ -30,3 +31,10 @@ services:
       retries: 5
       start_period: 30s
 
+volumes:
+  # Named volumes for LDAP data and config
+  # These are managed by Docker and avoid permission issues
+  flext-ldap-data:
+    driver: local
+  flext-ldap-config:
+    driver: local
