--- a/.env.test
+++ b/.env.test
@@ -10,13 +10,13 @@
 #
 # ONLY 3 REQUIRED VARIABLES for local testing:
 
-FLEXT_LDAP_CONNECTION__PORT=3390
+FLEXT_LDAP_PORT=3390
 # Connection (auto-detects port, SSL, timeouts from server)
-FLEXT_LDAP_CONNECTION__SERVER=localhost
+FLEXT_LDAP_HOST=localhost
 
 # Authentication (use empty/remove for anonymous bind)
-FLEXT_LDAP_AUTH__BIND_DN=cn=admin,dc=flext,dc=local
-FLEXT_LDAP_AUTH__BIND_PASSWORD=admin
+FLEXT_LDAP_BIND_DN=cn=admin,dc=flext,dc=local
+FLEXT_LDAP_BIND_PASSWORD=admin
 
 # OPTIONAL - Only if you need to override auto-detection:
 # FLEXT_LDAP_SEARCH__BASE_DN=dc=flext,dc=local  # Auto-detected from server
