--- a/pyproject.toml
+++ b/pyproject.toml
@@ -212,12 +212,11 @@
         disallow_incomplete_defs = true
         disallow_untyped_calls = false
         disallow_untyped_defs = false
-        explicit_package_bases = true
         follow_imports = "normal"
         ignore_missing_imports = false
         incremental = true
-        mypy_path = "$MYPYPATH:../typings"
-        namespace_packages = true
+        mypy_path = "../typings"
+        namespace_packages = false
         no_implicit_optional = true
         python_version = "3.13"
         warn_redundant_casts = true
