fix(ldap): add pyrefly search-path for typings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -292,6 +292,8 @@
 
     [tool.pyrefly]
         search-path = [
+            "../typings",
+            "../typings/generated",
             ".",
             "src",
             "tests",
