--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 
 [project]
 name = "flext-ldap"
-version = "0.11.0"
+version = "0.12.0-dev"
 description = "Enterprise LDAP Operations Library for FLEXT Framework"
 readme = "README.md"
 keywords = [
