refactor: standardize namespaced imports and typing patterns for 0.11.0-dev

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -260,11 +260,12 @@ overrides = [ { module = [
 
 [tool.pyrefly]
 search-path = [
-  "../typings",
-  "../typings/generated",
-  ".",
-  "src",
-  "tests",
+    "../typings",
+    "../typings/generated",
+    "src",
+    "tests",
+    "examples",
+    "scripts"
 ]
 
 [tool.bandit]
