refactor: remove cast() abuse and fix model imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -259,14 +259,7 @@ overrides = [ { module = [
 ], ignore_missing_imports = true } ]
 
 [tool.pyrefly]
-search-path = [
-    "../typings",
-    "../typings/generated",
-    "src",
-    "tests",
-    "examples",
-    "scripts"
-]
+search-path = [ "../typings", "../typings/generated", "src", "tests", "examples", "scripts" ]
 
 [tool.bandit]
 skips = [ "B404", "B603", "B607", "B105", "B608" ]
